--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-313.4KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇨🇳 中国-438.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-766.2KB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-583.0KB/s(Youtube:不良林), server: 42.157.195.231, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.00MB/s(Youtube:不良林), server: 14.152.92.76, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-389.9KB/s(Youtube:不良林), server: 42.157.195.233, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-840.2KB/s(Youtube:不良林), server: 42.157.195.235, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇫🇷 法国-1.68MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇳 中国-379.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-576.1KB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-311.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇸🇬 新加坡-945.2KB/s(Youtube:不良林), server: 18.140.1.222, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇨🇳 中国-373.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇨🇳 中国-347.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-925.8KB/s(Youtube:不良林), server: 42.157.195.228, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-308.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-498.8KB/s(Youtube:不良林), server: 45.129.3.222, port: 55555, type: vmess, uuid: 6742be84-a40d-4b91-adda-12dd4e8a94b6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-313.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-766.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-945.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-498.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-313.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-766.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-945.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-498.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-313.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-766.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-945.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-498.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-313.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-766.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-945.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-498.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-313.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-766.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-945.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-498.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-313.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-766.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-945.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-498.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-313.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-766.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-840.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-945.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-347.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-498.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
