--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1016.0KB/s(Youtube:不良林), server: 42.157.195.232, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1006.6KB/s(Youtube:不良林), server: 14.152.92.80, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-684.0KB/s(Youtube:不良林), server: 42.157.195.231, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: 14.152.92.76, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-976.0KB/s(Youtube:不良林), server: 42.157.195.230, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.72, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇰🇷 韩国-1.45MB/s(Youtube:不良林), server: 13.209.18.199, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.28MB/s(Youtube:不良林), server: 13.124.190.68, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-461.3KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 42.157.195.233, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-301.1KB/s(Youtube:不良林), server: 120.233.29.189, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 阿联酋-437.0KB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 104.129.63.65, port: 8443, type: trojan, password: cUDgjDkSfn, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.28MB/s(Youtube:不良林), server: 54.179.88.143, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1016.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 阿联酋-437.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1016.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 阿联酋-437.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1016.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 阿联酋-437.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1016.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 阿联酋-437.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1016.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 阿联酋-437.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1016.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 阿联酋-437.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1016.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-684.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-976.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-323.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-461.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-301.1KB/s(Youtube:不良林)
+      - 阿联酋-437.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
